crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-02.stderr
TOML parse error at line 1, column 24
  |
1 | bad-uni-esc-02 = "val\Ux"
  |                        ^
too few unicode value digits, expected unicode hexadecimal value
